--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h2>誰是皓崴</h2>
 						</header>
 						<p>
-						皓崴是一個個性樂觀的大男孩，因為有些慢熟和悶騷，所以給人的第一印象也許是比較正經的人，但熟了之後就會發現到皓崴的ㄎㄧㄤ。 皓崴喜歡音樂和運動。運動的部分較喜歡籃球、桌球和羽毛球，但比起運動皓崴喜歡音樂更多一點。 從小就喜歡唱歌的皓崴在高中遇上吉他，讓皓崴上大學最想做的事成了組以創作為主的樂團。 皓崴目前聽最多的還是華語流行歌還有獨立樂團，而最近比較喜歡的樂風偏向於Fusion,Jazz,Funk,Blue這一類的。</p>
+						皓崴是一個樂觀的大男孩，因為有些慢熟和悶騷，所以給人的第一印象也許是比較正經的人，但熟了之後就會發現到皓崴的ㄎㄧㄤ。 皓崴喜歡音樂和運動。運動的部分較喜歡籃球、桌球和羽毛球，但比起運動皓崴喜歡音樂更多一點。 從小就喜歡唱歌的皓崴在高中遇上吉他，讓皓崴上大學最想做的事成了組以創作為主的樂團。 皓崴目前聽最多的還是華語流行歌還有獨立樂團，而最近比較喜歡的樂風偏向於Fusion,Jazz,Funk,Blue這一類的。</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
