--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="IMG_5738.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="IMG_5738.JPG" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>誰是皓崴</h2>
