--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>皓崴的個人網站</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,28 +44,28 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic02.jpg" alt="Where is my photo???" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>我的嗜好</h2>
+							<h2>皓崴喜歡的音樂</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>以下四個是皓崴最近喜歡的音樂人</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<h3>盧廣仲</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<h3>WHYNOT</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>YELLOW</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<h3>9m88</h3>
 							</li>
 						</ul>
 					</div>
@@ -76,12 +76,16 @@
 		<!-- Three -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit primary"><a href="https://www.youtube.com/watch?v=yRNia0_tbgY"><img src="WHYNOT.jpg" alt="Where is my photo???" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>皓崴想推薦的一首歌</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>2018 年台灣音樂開始大量融合爵士、放克或是 City Pop 等元素，但事實上，早在 1995 年，就有團體做出這類的音樂，他們是 WHY NOT。
+　　
+						只出過一張專輯 《 #無法度按奈》，同名歌曲也是 WHY NOT 代表曲。1984 年成軍，1995 年發第一張專輯，但也是最後一張專輯。
+　　
+						撇除早期台式爵士大樂隊，#台語爵士 在某種程度上較少見，充滿#CityPop 曲風的主打曲〈無法度按耐〉，第一次聽完，大概就是 #鹹濕極致。這種充分利用管樂來營造如同費洛蒙香水的樂句，在一句「阮煩惱妳咁知　若有妳就有全世界」，接著副歌還給我「Can we making love tonight？真希望和妳擱一次」，猶如三級片才會出現的「週四下班後意外遇到某人，明明知道隔天還要上班，但『無法度按耐』的迎接這漫長夜晚」！(擷取自Kogi Rock 麴音樂 粉專）</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
