--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="Where is my photo???" /></span>
+					<span class="image fit primary"><img src="IMG_0746.PNG" alt="Where is my photo???" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>皓崴喜歡的音樂</h2>
