--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 						<p>以下四個是皓崴最近喜歡的音樂人</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
+								<span class=""></span>
 								<h3>盧廣仲</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
+								<span class=""></span>
 								<h3>WHYNOT</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
+								<span class=""></span>
 								<h3>YELLOW</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
+								<span class=""></span>
 								<h3>9m88</h3>
 							</li>
 						</ul>
