--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- Three -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><a href="https://www.youtube.com/watch?v=yRNia0_tbgY"><img src="WHYNOT.jpg" alt="Where is my photo???" /></a></span>
+					<span class="image fit primary"><a href="https://www.youtube.com/watch?v=yRNia0_tbgY"><img src="1366444904-672461234.jpg" alt="Where is my photo???" /></a></span>
 					<div class="content">
 						<header class="major">
 							<h2>皓崴想推薦的一首歌</h2>
