--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<p>以下四個是皓崴最近喜歡的音樂人</p>
 						<ul class="icons-grid">
 							<li>
-								<span class=""></span>
+								<span class="fa fa-guitar"></span>
 								<h3>盧廣仲</h3>
 							</li>
 							<li>
@@ -80,7 +80,7 @@
 					</span>
 					<div class="content">
 						<header class="major">
-							<a href="https://www.youtube.com/watch?v=yRNia0_tbgY"><h2>皓崴想推薦的一首歌</h2>
+							<a href="https://www.youtube.com/watch?v=yRNia0_tbgY"><h2>皓崴特別想推薦的一首歌</h2>
 						</header>
 						<p>2018 年台灣音樂開始大量融合爵士、放克或是 City Pop 等元素，但事實上，早在 1995 年，就有團體做出這類的音樂，他們是 WHY NOT。
 						只出過一張專輯 《 #無法度按奈》，同名歌曲也是 WHY NOT 代表曲。1984 年成軍，1995 年發第一張專輯，但也是最後一張專輯。撇除早期台式爵士大樂隊，#台語爵士 在某種程度上較少見，充滿#CityPop 曲風的主打曲〈無法度按耐〉，第一次聽完，大概就是 #鹹濕極致。這種充分利用管樂來營造如同費洛蒙香水的樂句，在一句「阮煩惱妳咁知　若有妳就有全世界」，接著副歌還給我「Can we making love tonight？真希望和妳擱一次」，猶如三級片才會出現的「週四下班後意外遇到某人，明明知道隔天還要上班，但『無法度按耐』的迎接這漫長夜晚」！<br>(擷取自Kogi Rock 麴音樂 粉專）</p></a>
