--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 						<p>以下四個是皓崴最近喜歡的音樂人</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="fa fa-guitar"></span>
-								<h3>盧廣仲</h3>
+								<span class=""></span>
+								<a href="https://www.youtube.com/watch?v=4A3PxH7W74s"><h3>盧廣仲</h3></a>
 							</li>
 							<li>
 								<span class=""></span>
-								<h3>WHYNOT</h3>
+								<a href="https://www.youtube.com/watch?v=5qi38X0kGvs"><h3>WHYNOT</h3></a>
 							</li>
 							<li>
 								<span class=""></span>
-								<h3>YELLOW</h3>
+								<a href="https://www.youtube.com/watch?v=XJPpz3gKjRI"><h3>YELLOW</h3></a>
 							</li>
 							<li>
 								<span class=""></span>
-								<h3>9m88</h3>
+								<a href="https://www.youtube.com/watch?v=YsIuLotD8H8"><h3>9m88</h3></a>
 							</li>
 						</ul>
 					</div>
