--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<header class="major">
 							<h2>皓崴喜歡的音樂</h2>
 						</header>
-						<p>以下四個是皓崴最近喜歡的音樂人</p>
+						<p>以下四個是皓崴最近喜歡的音樂人(點擊他們聽聽看）</p>
 						<ul class="icons-grid">
 							<li>
 								<span class=""></span>
@@ -431,11 +431,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						
+						<li><a href="https://www.facebook.com/michael.gary.5811" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/gary_pee_high/?hl=zh-tw" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
