--- a/index.html
+++ b/index.html
@@ -414,21 +414,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>以上是皓崴的簡單介紹</h2>
 					</header>
-					<form method="post" action="#">
-						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-								</ul>
-							</div>
+					<p>如果覺得無聊可以從這去<a href="https://www.youtube.com/?gl=TW&tab=r1">YOUTUBE</a>找點樂子......
+						如果不棄嫌可以從FACEBOOK或INSTAGRAM多認識我一點ㄛ(點擊網頁最下面的小圖案)
+					
 						</div>
-					</form>
-				</div>
+					<
 				<footer>
 					<ul class="icons">
 						
