--- a/index.html
+++ b/index.html
@@ -417,7 +417,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<h2>以上是皓崴的簡單介紹</h2>
 					</header>
 					<p>如果覺得無聊可以從這去<a href="https://www.youtube.com/?gl=TW&tab=r1">YOUTUBE</a>找點樂子......
-					</br>啊如果不棄嫌可以從FACEBOOK或INSTAGRAM多認識我一點ㄛ(點擊網頁最下面的小圖案)</p>
+					</br>啊如果不棄嫌可以從FACEBOOK或INSTAGRAM多認識我一點ㄛ
+				</br>(點擊網頁最下面的小圖案)</p>
 					
 						</div>
 					<
