--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 						<header class="major">
 							<h2>皓崴喜歡的音樂</h2>
 						</header>
-						<p>以下四個是皓崴最近喜歡的音樂人(點擊他們聽聽看）</p>
+						<p>以下四個是皓崴最近喜歡的音樂人(點擊他們聽聽看）
+						</br>P.S.背景圖是學測完去廣仲的大人中演唱會</p>
 						<ul class="icons-grid">
 							<li>
 								<span class=""></span>
