喜歡的音樂

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<h2>皓崴喜歡的音樂</h2>
 						</header>
 						<p>以下四個是皓崴最近喜歡的音樂人(點擊他們聽聽看）
-						</br>P.S.背景圖是學測完去廣仲的大人中演唱會</p>
+						</br>P.S.背景圖是學測完去廣仲大人中演唱會的搖滾區皓崴</p>
 						<ul class="icons-grid">
 							<li>
 								<span class=""></span>
